# sentinelops

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  platform_health.py
backend/app/core/: __init__.py  config.py  crypto.py  db.py  errors.py  logging.py  orm_base.py  passwords.py  redis.py  security.py
backend/app/models/: __init__.py  audit.py  user.py  webauthn.py
backend/app/modules/: __init__.py
backend/app/modules/ids/: __init__.py  models.py  router.py  schemas.py
backend/app/modules/ids/services/: drift.py  flow.py  inference.py
backend/app/modules/ids/tests/: test_inference.py
backend/app/modules/recon/: __init__.py  allowlist.py  models.py  rescue.py  router.py  schemas.py  workers.py
backend/app/modules/recon/services/: __init__.py  ct_search.py  cve.py  dns_recon.py  http_headers.py  httprobe.py  portscan.py  reverse_dns.py  stack_fingerprint.py  subdomain.py  tls_info.py  webfuzz.py  wellknown_fetch.py
backend/app/modules/recon/tests/: test_allowlist.py  test_portscan.py
backend/app/modules/siem/: __init__.py  intel_routes.py  models.py  router.py  schemas.py  ws_routes.py
backend/app/modules/siem/rules/: brute_force_ssh.json  credential_dumping.json  dns_tunneling.json  lateral_movement_smb.json  suspicious_powershell.json  web_shell_upload.json
backend/app/modules/siem/services/: __init__.py  attack.py  detection.py  intel_enrich.py  sigma.py  stix_ingest.py  ueba.py
backend/app/modules/siem/tests/: test_detection.py
backend/app/modules/vapt/: __init__.py  mitre_data.py  mitre_ids.py  models.py  router.py  schemas.py
backend/app/modules/vapt/data/: mitre_enterprise_foundation.json
backend/app/modules/vapt/services/: __init__.py  cypher_export.py  llm.py  recon_batch.py  (+1 more)
backend/app/modules/vault/: __init__.py  models.py  router.py  schemas.py
backend/app/schemas/: auth.py  common.py
backend/app/scripts/: seed.py
backend/app/services/: __init__.py  audit.py  auth.py  events.py
backend/app/tests/: conftest.py  test_health.py
backend/app/workers/: celery_app.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_siem_iocs_investigations.py  0003_user_password_hash.py  0004_align_legacy_columns.py  0005_ids_prediction_varchar.py  0006_vapt_briefs.py  0007_vapt_ttp_memory_graph.py
(+67 files in other folders)
