[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelops-backend"
version = "0.1.0"
description = "SentinelOps backend: SIEM, Recon, IDS, and encrypted Vault."
requires-python = ">=3.11"
readme = "../README.md"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations/versions", "app/modules/siem/rules"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "ASYNC",
    "RUF",
]
ignore = [
    "E501",  # line length — black handles it
    "B008",  # FastAPI uses Depends() in defaults
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["B018", "S101"]
"app/scripts/seed.py" = ["T201"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "migrations/versions"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = [
    "webauthn.*",
    "celery.*",
    "joblib.*",
    "sklearn.*",
    "aiohttp.*",
    "dns.*",
    "fakeredis.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["app/tests", "app/modules"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: integration tests that need external services",
    "slow: tests that take >1s",
]
